Fix photo rail and tweet header alignment

--- a/src/sass/profile/photo-rail.scss
+++ b/src/sass/profile/photo-rail.scss
@@ -24,9 +24,8 @@
     }
 
     &-grid {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 3px 3px;
+        display: flex;
+        flex-wrap: wrap;
         padding: 5px 12px 12px;
 
         a {
@@ -37,7 +36,9 @@
             &:before {
                 content: "";
                 display: block;
-                padding-top: 100%;
+                width: 52px;
+                height: 52px;
+                padding: 4px;
             }
         }
 
@@ -45,7 +46,6 @@
             height: 100%;
             width: 100%;
             border-radius: 4px;
-            object-fit: cover;
             position: absolute;
             top: 0;
             left: 0;
